# skripsi-project

./: .gitignore  CMakeLists.txt  Makefile  README.md  repomix.config.json  virtualize.bat
includes/: ImGuiUtils.h  cloud.hpp  login.h
includes/app_imgui/: ImGuiUtils.h  helper.h  login.h
includes/app_qt/: todo.h  todo_auth.h
includes/encryption/: aes.h
lib/: EagleVMStub.lib  Zycore.lib  Zydis.lib  spdlog.lib
log/instruction_count/: JuicyPotato (Non-VM).txt  JuicyPotato (VM).txt  Lilith_Client (Non-VM).txt  Lilith_Client (VM).txt  app_qt (Non-VM).txt  app_qt (VM).txt  console (Non-VM).txt  console (VM).txt  count.ps1  count.txt  encryption (Non-VM).txt  encryption (VM).txt  quick_sort (Non-VM).txt  quick_sort (VM).txt  size (Non-VM).txt
public/resources/: EagleVM.rc  app.rc  array.rc  cloud.rc  console.rc  encrypt.rc  qt.rc  size.rc
server/: docker-compose.yml
server/backend/: Dockerfile  main.go
server/postgres/: init.sql
src/: EagleVM.cpp  auth.cpp  console.cpp  login.cpp  main.cpp  sdk.cpp  sorting.cpp  sorting_error.cpp  test.cpp
src/EagleVM/: EagleVM.cpp  EagleVM_sorting.cpp
src/EagleVMSandbox/: EagleVMSandbox.cpp
src/ImGui/: helper.cpp  login.cpp  main.cpp
src/Lilith/client/: CMakeLists.txt  SendGetMethods.cpp  client.cpp  general.cpp  keylogger.cpp  main.cpp
src/Lilith/server/: CMakeLists.txt  server.cpp  server.h
src/app_imgui/: CMakeLists.txt  helper.cpp  login.cpp  login_cloud.cpp  main.cpp
src/app_qt/: CMakeLists.txt
src/app_qt/forms/: todo.ui  todo_auth.ui
src/app_qt/src/: main.cpp  todo.cpp  todo_auth.cpp  todo_auth_cloud.cpp
src/console/: CMakeLists.txt  auth_cloud.cpp  console.cpp  console_cloud.cpp
src/malwares/DripLoader/DripLoader/: DripLoader.cpp  DripLoader.vcxproj
src/malwares/FilelessPELoader/: FilelessPELoader.cpp  FilelessPELoader.vcxproj
src/malwares/JuicyPotato/: CMakeLists.txt  JuicyPotato.cpp
src/malwares/Lilith/client/: CMakeLists.txt  client.cpp  cmdRedirect.cpp  settings.cpp
src/malwares/Lilith/server/: CMakeLists.txt  SendGetMethods.cpp
src/malwares/PELoader/PELoader/PELoader/: PELoader.cpp  PELoader.vcxproj
src/malwares/ParadoxiaClient/ParadoxiaClient/: ParadoxiaClient.c  ParadoxiaClient.vcxproj
src/malwares/ParadoxiaClient/vxlang/: vxlib.h
src/malwares/Reaper/: README.md  Reaper.sln
src/malwares/Reaper/Reaper/: Reaper.cpp  Reaper.vcxproj  Reaper.vcxproj.filters
src/malwares/Reaper/vxlang/: vxlang.vxm
src/malwares/RunPE-In-Memory/RunPEinMemory/: RunPEinMemory.cpp  RunPEinMemory.vcxproj
src/malwares/SigLoader/: SigLoader.sln
src/malwares/SigLoader/SigLoader/: Helper.cpp  Helper.h  SigLoader.cpp  SigLoader.vcxproj  SigLoader.vcxproj.filters
src/malwares/Stryker/src/Maya/: Stryker.vcxproj  global.h
src/malwares/al-khaser/: README.md
src/malwares/al-khaser/al-khaser/: Al-khaser.cpp  al-khaser.vcxproj
src/malwares/al-khaser/al-khaser/Shared/: Utils.cpp
src/malwares/donut/: Makefile.mingw  Makefile.msvc  donut.c  loader_exe_x64.go  loader_exe_x64.h
src/malwares/donut/include/: vxlib.h
src/malwares/donut/lib/: donut.exp  donut.lib
src/performance/: CMakeLists.txt  aes.cpp  dummy.rc  encryption.cpp  quick_sort.cpp  size.cpp  sizes.cpp
vxlang/: vxlang.vxm
